--- a/src/components/Styles/userprofile.css
+++ b/src/components/Styles/userprofile.css
@@ -10,6 +10,7 @@
 
 .profile-page {
     margin-top: 1em;
+    color: cadetblue !important;
 }
 
 .col-xs-6 .form-label{
@@ -29,11 +30,3 @@
     margin-bottom: 20px;
     font-weight: 600;
 }
-
-/* .success-message .message {
-    font-weight: 600;
-}
-.show-nothing{
-    display: none;
-} */
-
